Fix end game report not layouting properly on firefox

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -248,7 +248,7 @@ html {
 }
 
 #game-end-container {
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
 }
